Fixed navigation spacing for main nav

--- a/themes/custom/eie8/scss/partials/eienavigation.scss
+++ b/themes/custom/eie8/scss/partials/eienavigation.scss
@@ -58,8 +58,8 @@
   }
 
   .main-nav-item {
-    margin-left: 12px;
-    margin-right: 12px;
+    margin-left: 3px;
+    margin-right: 3px;
   }
 
   .secondary-nav-item {
