--- a/themes/custom/eie8/scss/style.css
+++ b/themes/custom/eie8/scss/style.css
@@ -13445,8 +13445,8 @@ template {
       position: absolute; }
 
   .main-nav-item {
-    margin-left: 12px;
-    margin-right: 12px; }
+    margin-left: 3px;
+    margin-right: 3px; }
 
   .secondary-nav-item {
     margin-left: 3px;
